k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}
  namespace: ${K8S_NAMESPACE}
spec:
  type: ClusterIP # internal application
  #type: LoadBalancer # external connectivity application and production environment, high availability and scalability
  #type: NodePort # external connectivity application
  selector:
    app: ${SERVICE_NAME}
  ports:
    - name: http
      port: ${SERVICE_PORT} # service cluster port
      targetPort: ${DOCKER_CONTAINER_SERVICE_PORT} # application port from dockerfile
#      nodePort: 30020
      protocol: TCP
