k8s-manifests/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ${SERVICE_NAME}
  namespace: ${K8S_NAMESPACE}
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
#    - host: template-go-api.example.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${SERVICE_NAME}
                port:
                  number: ${SERVICE_PORT}
